# MusicAppl

./: CMakeLists.txt
includes/: Artist_class.hpp  CMakeLists.txt  MusicApp_class.hpp  Podcast_class.hpp  Song_class.hpp  User.hpp
src/: Artist_class.cpp  Artist_class.hpp  CMakeLists.txt  MusicApp.cpp  MusicApp_class.hpp  Song_class.cpp  Song_class.hpp  User.cpp  User.hpp  main.cpp
src/App/: CMakeLists.txt  MusicApp.cpp
src/Artist/: Artist_class.cpp  CMakeLists.txt  Song_class.cpp
src/Podcast/: CMakeLists.txt
src/User/: CMakeLists.txt  User.cpp
